# schoology-backup

./: .gitignore  README.md  example-config.toml  main.py  pyproject.toml
resources/: style.css
