[project]
name = "schoology-backup"
version = "0.0.4"
description = "A simple tool to help back up course data from Schoology!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "schoolopy>=0.3.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
schoolopy = { git = "https://github.com/ErikBoesen/schoolopy" }
